--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,28 @@
+# pdfs etc.
 papers
 *.pdf
+
+# latex auxiliary files:
+*.aux
+*.glo
+*.idx
+*.log
+*.toc
+*.ist
+*.acn
+*.acr
+*.alg
+*.bbl
+*.blg
+*.dvi
+*.glg
+*.gls
+*.ilg
+*.ind
+*.lof
+*.lot
+*.maf
+*.mtc
+*.mtc1
+*.out
+*.synctex.gz
