--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ deploy:
   skip-cleanup: true
   # Directory where your generated files are located
   local_dir: public
-  # Github security/auth token
+  # Github security/auth token (added in Travis Settings)
   github-token: $GITHUB_TOKEN
   # Incremental commit to keep old build/files from previous deployments
   keep-history: true
