--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,19 @@
-language: python
-python:
-  - "3.8"
+language: r
 install:
+  - sudo apt-get install -y python3.8
   - pip install -r requirements.txt
 # command to run tests
 script:
-  - python3 code/parser.py
-
+  - make
+cache: packages
+r_packages:
+  - pacman
+  - here
+  - data.table
+  - DT
+  - tidyverse
+os:
+  - linux
 deploy:
   # Use Github pages deploy process
   provider: pages
@@ -20,6 +27,6 @@ deploy:
   keep-history: true
   # Git branch on which it should deploy (master, gh-pages, foo...)
   target_branch: gh-pages
-  on:
-    # Which branch on commit/push will trigger deployment
-    branch: master
+#  on:
+#    # Which branch on commit/push will trigger deployment
+#    branch: master
