--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: r
+sudo: true
 install:
-  - sudo apt-get install -y python3.8
+  - sudo apt-get install -y python3.7
   - pip install -r requirements.txt
 # command to run tests
 script:
