--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,8 @@ language: python
 python:
   - "3.8"
 before_install:
-  - sudo apt-get install -y r-base:4.0.3
+  - sudo apt-get update
+  - sudo apt-get install -y r-base
   - sudo apt-get install -y r-cran-data.table r-cran-tidyverse
 install:
   - pip install --user -r requirements.txt
