--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ dist: xenial
 language: r
 sudo: true
 before_install:
-  - sudo apt-get install python3 python3-pip python3-pandas
+  - sudo apt-get install python3 python3-pip python3-pandas python3-setuptools
   - pip3 install bibtexparser
 # command to run tests
 script:
