--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@ dist: xenial
 language: r
 sudo: true
 latex: false
+git:
+  submodules: false
 before_install:
   - sudo apt-get install python3 python3-pip python3-pandas python3-setuptools
   - pip3 install bibtexparser
