try to fix build by installing dependencies via requirements.txt, see #41 (save all to git)

--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,6 @@
 **/.git* annex.largefiles=nothing
 CHANGELOG.md annex.largefiles=nothing
 README.md annex.largefiles=nothing
+.travis.yml annex.largefiles=nothing
+Makefile annex.largefiles=nothing
+requirements.txt annex.largefiles=nothing
