--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,10 @@ git:
   submodules: false
 before_install:
   - sudo apt-get install python3 python3-pip python3-pandas python3-setuptools
-  - pip3 install bibtexparser
+  - pip3 install requirements
 # command to run tests
 script:
-  - make
+  - make all
 cache: packages
 r_packages:
   - pacman
