--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,8 @@ git:
   submodules: false
 before_install:
   - sudo apt-get install python3 python3-pip python3-pandas python3-setuptools
-  - pip3 install --upgrade pip3
+  - pip3 install --upgrade pip
+  - pip install --upgrade pip
   - pip3 install -r requirements.txt
 # command to run tests
 script:
