--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ git:
 before_install:
   - sudo apt-get install python3 python3-pip python3-pandas python3-setuptools
   - pip3 install --upgrade pip
-  - pip3 install -r requirements.txt
+  - pip install -r requirements.txt
 # command to run tests
 script:
   - make all
