--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,10 @@ latex: false
 git:
   submodules: false
 before_install:
-  - sudo apt-get install python3 python3-pip python3-pandas python3-setuptools
+  - sudo apt-get update
+  - sudo apt-get install python3.8 python3-pip python3-pandas python3-setuptools
   - pip3 install --upgrade pip
-  - pip install -r requirements.txt
+  - pip3 install -r requirements.txt
 # command to run tests
 script:
   - make all
