--- a/.travis.yml
+++ b/.travis.yml
@@ -7,12 +7,14 @@ git:
 before_install:
   # install python 3.8
   # see https://docs.python-guide.org/starting/install3/linux/
-  - sudo apt-get install software-properties-common
-  - sudo add-apt-repository --yes ppa:deadsnakes/ppa
-  - sudo apt-get update
+  # - sudo apt-get install software-properties-common
+  # - sudo add-apt-repository --yes ppa:deadsnakes/ppa
+  # - sudo apt-get update
   - sudo apt-get install python3.8 python3-pip python3-pandas python3-setuptools
-  - pip3 install --upgrade pip
-  - python-3.8 -m pip install -r requirements.txt
+  # - pip3 install --upgrade pip
+  # - python-3.8 -m pip install -r requirements.txt
+  - pip3 install bibtexparser
+  - pip3 install pyparsing==2.4.7
 # command to run tests
 script:
   - make all
