--- a/.travis.yml
+++ b/.travis.yml
@@ -14,8 +14,9 @@ before_install:
   # - pip3 install --upgrade pip
   # - python-3.8 -m pip install -r requirements.txt
   - sudo apt-get install python3 python3-pip python3-pandas python3-setuptools
-  - pip3 install bibtexparser
+  - pip3 install bibtexparser==1.2.0
   - pip3 install pyparsing==2.4.7
+  - pip3 install future==0.18.2
 # command to run tests
 script:
   - make all
