--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-dist: xenial
+dist: bionic
 language: r
 sudo: true
 latex: false
@@ -7,16 +7,16 @@ git:
 before_install:
   # install python 3.8
   # see https://docs.python-guide.org/starting/install3/linux/
-  # - sudo apt-get install software-properties-common
-  # - sudo add-apt-repository --yes ppa:deadsnakes/ppa
-  # - sudo apt-get update
-  #  - sudo apt-get install python3.8 python3-pip python3-pandas python3-setuptools
-  # - pip3 install --upgrade pip
-  # - python-3.8 -m pip install -r requirements.txt
-  - sudo apt-get install python3 python3-pip python3-pandas python3-setuptools
-  - pip3 install bibtexparser==1.2.0
-  - pip3 install pyparsing==2.4.7
-  - pip3 install future==0.18.2
+  - sudo apt-get install software-properties-common
+  - sudo add-apt-repository --yes ppa:deadsnakes/ppa
+  - sudo apt-get update
+  - sudo apt-get install python3.8 python3-pip python3-pandas python3-setuptools
+  - pip3 install --upgrade pip
+  - pip install -r requirements.txt
+  #- sudo apt-get install python3 python3-pip python3-pandas python3-setuptools
+  #- pip3 install bibtexparser==1.2.0
+  #- pip3 install pyparsing==2.4.7
+  #- pip3 install future==0.18.2
 # command to run tests
 script:
   - make all
