--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,1 @@
-Package: bibliography
-Title: bibliography
-Version: 0.0.1
-Imports: pacman, here, data.table, DT, tidyverse, lemon, bookdown, assertr
-License: MIT
+.git/annex/objects/QQ/Pm/MD5E-s151--3fed9a6e3897499f23fb6695dea01d6e/MD5E-s151--3fed9a6e3897499f23fb6695dea01d6e
